// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bad index error list_ref: expectParsedError 1`] = `
Object {
  "alertResult": Array [],
  "code": "list_ref(list(1, 2, 3), 3);",
  "displayResult": Array [],
  "numErrors": 1,
  "parsedErrors": "native:\\"Line 148: Error: tail(xs) expects a pair as argument xs, but encountered null\\"
interpreted:\\"Line 1: Calling non-function value [object Object].\\"",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`bad index error list_ref: expectParsedError 2`] = `
Object {
  "alertResult": Array [],
  "code": "list_ref(list(1, 2, 3), -1);",
  "displayResult": Array [],
  "numErrors": 1,
  "parsedErrors": "native:\\"Line 148: Error: tail(xs) expects a pair as argument xs, but encountered null\\"
interpreted:\\"Line 1: Calling non-function value [object Object].\\"",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`bad index error list_ref: expectParsedError 3`] = `
Object {
  "alertResult": Array [],
  "code": "list_ref(list(1, 2, 3), 1.5);",
  "displayResult": Array [],
  "numErrors": 1,
  "parsedErrors": "native:\\"Line 148: Error: tail(xs) expects a pair as argument xs, but encountered null\\"
interpreted:\\"Line 1: Calling non-function value [object Object].\\"",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`bad index error list_ref: expectParsedError 4`] = `
Object {
  "alertResult": Array [],
  "code": "list_ref(list(1, 2, 3), '1');",
  "displayResult": Array [],
  "numErrors": 1,
  "parsedErrors": "native:\\"Line 149: Expected string on right hand side of operation, got number.\\"
interpreted:\\"Line 1: Calling non-function value [object Object].\\"",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`bad number error build_list: expectParsedError 1`] = `
Object {
  "alertResult": Array [],
  "code": "build_list(x => x, '1');",
  "displayResult": Array [],
  "numErrors": 1,
  "parsedErrors": "Line 45: Expected number on left hand side of operation, got string.",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`bad number error enum_list: expectParsedError 1`] = `
Object {
  "alertResult": Array [],
  "code": "enum_list('1', '5');",
  "displayResult": Array [],
  "numErrors": 1,
  "parsedErrors": "Line 139: Expected string on right hand side of operation, got number.",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`bad number error enum_list: expectParsedError 2`] = `
Object {
  "alertResult": Array [],
  "code": "enum_list('1', 5);",
  "displayResult": Array [],
  "numErrors": 1,
  "parsedErrors": "Line 139: Expected string on right hand side of operation, got number.",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`bad number error enum_list: expectParsedError 3`] = `
Object {
  "alertResult": Array [],
  "code": "enum_list(1, '5');",
  "displayResult": Array [],
  "numErrors": 1,
  "parsedErrors": "Line 140: Expected number on right hand side of operation, got string.",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;
